--- a/NodejsServer/package.json
+++ b/NodejsServer/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nodejsserver",
   "version": "1.0.0",
-  "description": "",
   "main": "nodeClient.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
+  },
+  "description": ""
 }
